Before update Operations Module (planning, qc, open sales orders)

--- a/LimenawebApp/Views/Main/Dashboard.cshtml
+++ b/LimenawebApp/Views/Main/Dashboard.cshtml
@@ -52,7 +52,7 @@
 
                         </div>
                         <div class="card-body d-flex flex-column">
-                            <a href="@Url.Action("Authorizations","Finance")" class="btn btn-success mt-auto">Driver's Authorizations</a>
+                            <a href="@Url.Action("Index","Authorizations")" class="btn btn-success mt-auto">Driver's Authorizations</a>
                         </div>
                     </div>
                 </div>
