--- a/LimenawebApp/Views/Invoices/PlanningRoutes.cshtml
+++ b/LimenawebApp/Views/Invoices/PlanningRoutes.cshtml
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                 </div>
-
+                <input type="hidden" value="@ViewBag.warehousesel" id="whssel"/>
               
             </div>
         </div>
