--- a/LimenawebApp/Views/Shared/Header_main.cshtml
+++ b/LimenawebApp/Views/Shared/Header_main.cshtml
@@ -230,7 +230,7 @@
                             </li>
 
                         </ul>
-                        <a id="operpur_submenu" style="display:none" href="@Url.Action("Purchase_data", "Operations")" class="dropdown-item">Purchase Data</a>
+                        <a id="operpur_submenu" style="display:none" href="@Url.Action("SOP", "SOP")" class="dropdown-item">Purchase Data</a>
 
                         <a id="operrep_submenu" class="dropdown-item dropdown-toggle mr-lg-3" data-toggle="collapse" data-target="#multi_menu5">Reports</a>
                         <ul class="collapse" id="multi_menu5" data-parent="#accordion">
