--- a/LimenawebApp/Views/Shared/New_design/Scripts/PlanningRoutesScripts.cshtml
+++ b/LimenawebApp/Views/Shared/New_design/Scripts/PlanningRoutesScripts.cshtml
@@ -849,7 +849,7 @@
     var eventsCalendar =@Html.Raw(ViewBag.calroutes);
     var visibleInit = '@ViewBag.filtrofechastart';
     var visibleEnd = '@ViewBag.filtrofechaend';
-    var warehousesel = "@Html.Raw(ViewBag.warehousesel)";
+    var warehousesel = "@ViewBag.warehousesel";
 
 </script>
 <script>
