--- a/LimenawebApp/Views/Shared/_Layout.cshtml
+++ b/LimenawebApp/Views/Shared/_Layout.cshtml
@@ -497,7 +497,8 @@ else if (ViewBag.Title == "Distribuidora Limeña - Líderes en productos latinos
 
             $("#ReciboMercaderiaDia").select2({
                 // options
-                placeholder: "Dia de recibo de mercaderia (*)"
+                placeholder: "Dia de recibo de mercaderia (*)",
+                maximumSelectionLength: 4
             });
 
             $(function () {
